--- a/dockerApachev1.2/public-html/index.html
+++ b/dockerApachev1.2/public-html/index.html
@@ -31,11 +31,22 @@
     <script src="./assets/js/jquery.prettyPhoto.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_YNa0f8T0odrLfYUkPnN6h");
+        })();
+    </script>
 
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+
+    <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css">
+</head>
 
 <body>
     <app-root></app-root>
-<script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.bf99d438b005d57b2b31.js" defer></script><script src="main.a01cf0570fa6ab010fa5.js" defer></script></body>
+    <script src="runtime.359d5ee4682f20e936e9.js" defer></script>
+    <script src="polyfills.bf99d438b005d57b2b31.js" defer></script>
+    <script src="main.7c86ca1589c10b9fecfa.js" defer></script>
+</body>
 
 </html>
